--- a/cmd/atlas/nouns.html
+++ b/cmd/atlas/nouns.html
@@ -1,34 +1,12 @@
-<h1>Nouns</h1>
-  <a href="#dune-buggy">Dune Buggy</a>,
-  <a href="#enterprise">Enterprise</a>,
-  <a href="#picard">Picard</a>,
-  <a href="#riker">Riker</a>.
-
-<h2 id="dune buggy">Dune Buggy</h2>
-<span>Kind: <a href="/atlas/kinds#cars">Cars</a>.</span> <span class="spec"></span>
-
-<h3>Properties</h3>
-<ul>
-  <li>Dune Buggy: <span>3.</span></li>
-</ul>
-
-<h3>Relations</h3>
-  <a href="/atlas/relations/containing">Containing</a>.
-
-<h2 id="enterprise">Enterprise</h2>
-<span>Kind: <a href="/atlas/kinds#vehicles">Vehicles</a>.</span> <span class="spec"></span>
-
-<h3>Relations</h3>
-  <a href="/atlas/relations/containing">Containing</a>.
-
-<h2 id="picard">Picard</h2>
-<span>Kind: <a href="/atlas/kinds#people">People</a>.</span> <span class="spec"></span>
-
-<h3>Relations</h3>
-  <a href="/atlas/relations/containing">Containing</a>.
-
-<h2 id="riker">Riker</h2>
-<span>Kind: <a href="/atlas/kinds#people">People</a>.</span> <span class="spec"></span>
-
-<h3>Relations</h3>
-  <a href="/atlas/relations/containing">Containing</a>.
+<h1>Containing</h1>
+	Relates vehicles to many people.
+<table>
+<tr>
+  <td>Dune Buggy</td>
+  <td>Picard</td>
+</tr>
+<tr>
+  <td>Enterprise</td>
+  <td>Riker</td>
+</tr>
+</table>
