--- a/cmd/compose/assets/index.html
+++ b/cmd/compose/assets/index.html
@@ -56,7 +56,7 @@
 			<!-- <script src="tests/nodeTests.js"></script> -->
 			<!--  -->
 			<script src="src/stories/sayStory.js"></script> 
-			<!-- <script src="src/stories/blankStory.js"></script>  -->
+			<!-- <script src="src/stories/blankTest.js"></script>  -->
 			<!-- <script src="src/stories/currStory.js"></script>  -->
 			<!--  -->
 			<script src="src/shortcuts.js"></script>
