move assets to "www" directory, add handling for test button

--- a/cmd/compose/www/index.html
+++ b/cmd/compose/www/index.html
@@ -11,6 +11,11 @@
 		</head>
 		<body>
 			<div id="app" class="mk-container"
+				><div class="mk-header">
+					<span>Iffy Composer</span>
+    		</div>
+    		<mk-tools class="mk-buttons mk-aux"
+    		></mk-tools
 				><mk-browser
 				></mk-browser
 				><div class="mk-composer"
@@ -39,6 +44,7 @@
 			<!--  -->
 			<script src="src/browseCtrl.js"></script>
 			<script src="src/contextCtrl.js"></script>
+			<script src="src/toolsCtrl.js"></script>
 			<!-- composer controls  -->
 			<script src="src/pickInline.js"></script>
 			<script src="src/optCtrl.js"></script>
