composer: more sensible story file names; enable numCtrl.js

--- a/cmd/compose/www/index.html
+++ b/cmd/compose/www/index.html
@@ -47,6 +47,7 @@
 			<script src="src/toolsCtrl.js"></script>
 			<!-- composer controls  -->
 			<script src="src/pickInline.js"></script>
+			<script src="src/numCtrl.js"></script>
 			<script src="src/optCtrl.js"></script>
 			<script src="src/runCtrl.js"></script>
 			<script src="src/slotCtrl.js"></script>
@@ -61,9 +62,7 @@
 			<!-- <script src="tests/directiveTests.js"></script> -->
 			<!-- <script src="tests/nodeTests.js"></script> -->
 			<!--  -->
-			<script src="src/stories/sayStory.js"></script> 
-			<!-- <script src="src/stories/blankTest.js"></script>  -->
-			<!-- <script src="src/stories/currStory.js"></script>  -->
+			<script src="src/stories/newStory.js"></script> 
 			<!--  -->
 			<script src="src/shortcuts.js"></script>
 			<script src="src/index.js"></script>
