composer: group lang files

--- a/cmd/compose/www/index.html
+++ b/cmd/compose/www/index.html
@@ -55,8 +55,8 @@
 			<script src="src/txtCtrl.js"></script>
 			<script src="src/switch.js"></script>
 			<!--  -->
-			<script src="src/spec.js"></script> 
-			<script src="src/lang.js"></script> 
+			<script src="src/lang/spec.js"></script> 
+			<script src="src/lang/iffy.js"></script> 
 			<!--  -->
 			<!-- <script src="tests/tagTests.js"></script> -->
 			<!-- <script src="tests/directiveTests.js"></script> -->
