--- a/cmd/compose/www/index.html
+++ b/cmd/compose/www/index.html
@@ -57,6 +57,7 @@
 			<!--  -->
 			<script src="src/lang/spec.js"></script> 
 			<script src="src/lang/iffy.js"></script> 
+			<!-- <script src="src/lang/patternDev.js"></script>  -->
 			<!--  -->
 			<!-- <script src="tests/tagTests.js"></script> -->
 			<!-- <script src="tests/directiveTests.js"></script> -->
