--- a/cmd/compose/www/index.html
+++ b/cmd/compose/www/index.html
@@ -62,7 +62,7 @@
 			<!-- <script src="tests/directiveTests.js"></script> -->
 			<!-- <script src="tests/nodeTests.js"></script> -->
 			<!--  -->
-			<script src="src/stories/newStory.js"></script> 
+			<script src="src/stories/factorialTest.js"></script> 
 			<!--  -->
 			<script src="src/shortcuts.js"></script>
 			<script src="src/index.js"></script>
