compose pattern calls
* test statements are story statements now ( really, there's a "testing" interface that's a story statement )
* all execs blocks are arrays
* tweaks to spec display

--- a/cmd/compose/www/index.html
+++ b/cmd/compose/www/index.html
@@ -62,6 +62,7 @@
 			<!-- <script src="tests/directiveTests.js"></script> -->
 			<!-- <script src="tests/nodeTests.js"></script> -->
 			<!--  -->
+			<!-- <script src="src/stories/newStory.js"></script>  -->
 			<script src="src/stories/factorialTest.js"></script> 
 			<!--  -->
 			<script src="src/shortcuts.js"></script>
