wip: incorporate singular and plural kinds into assembly

--- a/cmd/compose/www/index.html
+++ b/cmd/compose/www/index.html
@@ -63,7 +63,9 @@
 			<!-- <script src="tests/nodeTests.js"></script> -->
 			<!--  -->
 			<script src="src/stories/newStory.js"></script> 
+			<!-- <script src="src/stories/patterns.js"></script>  -->
 			<!-- <script src="src/stories/factorialTest.js"></script>  -->
+			<!-- <script src="src/stories/cycleTest.js"></script>  -->
 			<!--  -->
 			<script src="src/shortcuts.js"></script>
 			<script src="src/index.js"></script>
