wip: compact json

--- a/cmd/compose/www/index.html
+++ b/cmd/compose/www/index.html
@@ -55,10 +55,13 @@
 			<script src="src/txtCtrl.js"></script>
 			<script src="src/switch.js"></script>
 			<!--  -->
-			<script src="src/lang/spec.js"></script> 
-			<script src="src/lang/iffy.js"></script> 
+			<script src="src/compact.js"></script> 
+			<script src="data/lang/spec.js"></script> 
+			<script src="data/lang/iffy.js"></script> 
 			<!--  -->
+			<script src="data/stories/sayTest.js"></script>
 			<script src="tests/sdsTests.js"></script>
+			<!--  -->
 			<!-- <script src="tests/tagTests.js"></script> -->
 			<!-- <script src="tests/directiveTests.js"></script> -->
 			<!-- <script src="tests/nodeTests.js"></script> -->
