--- a/cmd/compose/www/index.html
+++ b/cmd/compose/www/index.html
@@ -59,20 +59,19 @@
 			<script src="data/lang/spec.js"></script> 
 			<script src="data/lang/iffy.js"></script> 
 			<!--  -->
-			<script src="data/stories/sayTest.js"></script>
-			<script src="tests/sdsTests.js"></script>
-			<!--  -->
 			<!-- <script src="tests/tagTests.js"></script> -->
 			<!-- <script src="tests/directiveTests.js"></script> -->
 			<!-- <script src="tests/nodeTests.js"></script> -->
 			<!--  -->
 			<!-- <script src="data/stories/newStory.js"></script>  -->
+			<script src="data/stories/loadStory.js"></script> 
 			<!-- <script src="data/stories/patterns.js"></script>  -->
 			<!-- <script src="data/stories/factorialTest.js"></script>  -->
 			<!-- <script src="data/stories/cycleTest.js"></script>  -->
-			<!-- <script src="data/stories/loadStory.js"></script>  -->
+			<!-- <script src="data/stories/sayTest.js"></script> -->
+			<!-- <script src="tests/sdsTests.js"></script> -->
 			<!--  -->
-			<!-- <script src="src/shortcuts.js"></script> -->
-			<!-- <script src="src/index.js"></script> -->
+			<script src="src/shortcuts.js"></script>
+			<script src="src/index.js"></script>
 		</body>
 </html>
