introduce "object name" command
because we are using raw strings for objects, instead of having an object interface -- commands like GetField, KindOf, etc. need to know when to try to resolve a partial object name "boat" into a full object name "toy boat".
a new command "Object Name" ( which replaces "Exists" ) handles this -- commands which need objects as parameters specifiy it in their struct definition.
also introduced "lines" to distinguish b/t multi-line and single line ( "text" ) values -- hopefully will make editing object names, fields, etc. easier.

--- a/cmd/compose/www/index.html
+++ b/cmd/compose/www/index.html
@@ -64,8 +64,8 @@
 			<!-- <script src="tests/nodeTests.js"></script> -->
 			<!--  -->
 			<!-- <script src="data/stories/newStory.js"></script>  -->
-			<script src="data/stories/loadStory.js"></script> 
-			<!-- <script src="data/stories/patterns.js"></script>  -->
+			<!-- <script src="data/stories/loadStory.js"></script>  -->
+			<script src="data/stories/currStory.js"></script> 
 			<!-- <script src="data/stories/factorialTest.js"></script>  -->
 			<!-- <script src="data/stories/cycleTest.js"></script>  -->
 			<!-- <script src="data/stories/sayTest.js"></script> -->
