--- a/cmd/compose/www/index.html
+++ b/cmd/compose/www/index.html
@@ -1,13 +1,12 @@
 <html>
 		<head>
+				<title>Iffy Composer</title>
 				<link rel="stylesheet" href="lib/normalize.css">
 				<link rel="stylesheet" href="index.css">
 				<link rel="stylesheet" href="src/tags.css">
 				<script src="lib/stretchy.js" async></script>
 				<script src="lib/mousetrap.js"></script>
 				<script src="lib/vue.js"></script>
-			<head>
-	</head>
 		</head>
 		<body>
 			<div id="app" class="mk-container"
