lair: replace grid with sizing

--- a/cmd/compose/lair/index.html
+++ b/cmd/compose/lair/index.html
@@ -3,6 +3,7 @@
 			<title>Draggin' tests</title>
 			<link rel="stylesheet" href="lair.css">
 			<script src="lib/vue.js"></script>
+			<meta name="google" content="notranslate">
 	</head>
 	<body>
 		<div id="app">
