wip: lair dragging improvements
* separate dragging code into helper
* insert blank lines when needed
* add edge insertion marker

--- a/cmd/compose/lair/index.html
+++ b/cmd/compose/lair/index.html
@@ -8,10 +8,9 @@
 	<body>
 		<div id="app">
 			<em-table :items="items"></em-table>
-		</div>
-		<script src="lipsum.js"
-		></script
-		><script src="lair.js"
-		></script
+		</div
+		><script src="dragHelper.js"></script
+		><script src="lipsum.js"></script
+		><script src="lair.js"></script
 	></body>
 </html>
