wip: item move with unit tests
tweaks to allow a header item for the list; fix style bugs

--- a/cmd/compose/lair/index.html
+++ b/cmd/compose/lair/index.html
@@ -9,13 +9,16 @@
 		<div id="app"
 		><em-table 
 				:items="items"
-				:drag-helper="dragHelper"
+				:dropper="dropper"
 			></em-table
-		></div
-		><script src="dragHelper.js"></script
-		><script src="dragHandler.js"></script
-		><script src="lipsum.js"></script
-		><script src="lair.js"></script
-	></body>
+		></div>
+		<script src="src/dragList.js"></script> 
+		<script src="src/eventGroup.js"></script>
+		<script src="src/targetFinder.js"></script>
+		<script src="dragHelper.js"></script>
+		<script src="dragHandler.js"></script>
+		<script src="lipsum.js"></script>
+		<script src="lair.js"></script>
+	</body>
 </html>
 
