lair: move files into src

--- a/cmd/compose/lair/index.html
+++ b/cmd/compose/lair/index.html
@@ -15,10 +15,10 @@
 		<script src="src/dragList.js"></script> 
 		<script src="src/eventGroup.js"></script>
 		<script src="src/targetFinder.js"></script>
-		<script src="dragHelper.js"></script>
-		<script src="dragHandler.js"></script>
-		<script src="lipsum.js"></script>
-		<script src="lair.js"></script>
+		<script src="src/dragHelper.js"></script>
+		<script src="src/dragHandler.js"></script>
+		<script src="src/lipsum.js"></script>
+		<script src="src/lair.js"></script>
 	</body>
 </html>
 
