lair:group cleanup
add a class for groups with some helper methods

--- a/cmd/compose/lair/index.html
+++ b/cmd/compose/lair/index.html
@@ -23,7 +23,8 @@
 		<script src="src/dragList.js"></script> 
 		<script src="src/eventGroup.js"></script>
 		<script src="src/targetFinder.js"></script>
-		<script src="src/dragHelper.js"></script>
+		<script src="src/dragGroup.js"></script>
+		<script src="src/dropper.js"></script>
 		<script src="src/dragHandler.js"></script>
 		<script src="src/lipsum.js"></script>
 		<script src="src/lair.js"></script>
