lair: rough fixup to stop from dropping parents into children, etc
* rework model as a heirarchy of items; side effect: this enables <elem> to be removed.
* renamed dopper.source, dropper.start to reduce confusion i

--- a/cmd/compose/lair/index.html
+++ b/cmd/compose/lair/index.html
@@ -9,19 +9,26 @@
 		<div id="app"
 			><h3>Drag Text</h3
 			><em-table
-				:class="shift && 'em-shift'"
-				:items="groups[0]"
-				:dropper="dropper"
+					:class="shift && 'em-shift'"
+					:items="groups[0]"
+					:dropper="dropper"
 				><template
 					v-slot="{item,idx}"
-					><elem
-						:idx="idx"
-						:item="item"
-						:dropper="dropper"
-					></elem
+					><em-table
+				      :inline="true"
+				      :items="item.content"
+				      :dropper="dropper"
+				      :grip="'\u201C'"
+				    ><template
+				      v-slot="{item,idx}"
+				      ><span class="em-content"
+				      >{{item.content}} </span
+				    ></template
+				  ></em-table
 				></template
 			></em-table
 		></div>
+		<script src="src/item.js"></script>
 		<script src="src/dragList.js"></script> 
 		<script src="src/eventGroup.js"></script>
 		<script src="src/targetFinder.js"></script>
