--- a/cmd/compose/lair/index.html
+++ b/cmd/compose/lair/index.html
@@ -8,26 +8,11 @@
 	<body>
 		<div id="app"
 			><h3>Drag Text</h3
-			><em-table
-					:class="shift && 'em-shift'"
-					:items="groups[0]"
-					:dropper="dropper"
-				><template
-					v-slot="{item,idx}"
-					><em-table
-				      :inline="true"
-				      :items="item.content"
-				      :dropper="dropper"
-				      :grip="'\u201C'"
-				    ><template
-				      v-slot="{item,idx}"
-				      ><span class="em-content"
-				      >{{item.content}} </span
-				    ></template
-				  ></em-table
-				></template
-			></em-table
-		></div>
+			><main-panel
+				:items="groups[0]"
+				:dropper="dropper"
+			></main-panel
+			></div>
 		<script src="src/item.js"></script>
 		<script src="src/dragList.js"></script> 
 		<script src="src/eventGroup.js"></script>
