lair: split into multiple files for easier porting

--- a/cmd/compose/lair/index.html
+++ b/cmd/compose/lair/index.html
@@ -21,6 +21,9 @@
 		<script src="src/dropper.js"></script>
 		<script src="src/dragHandler.js"></script>
 		<script src="src/lipsum.js"></script>
+		<script src="src/shiftMixin.js"></script>
+		<script src="src/gutter.js"></script>
+		<script src="src/table.js"></script>
 		<script src="src/lair.js"></script>
 	</body>
 </html>
