refactoring node and items
goals:
. view shouldnt be creating nodes, nodes are the model. we (will) want (to be able to have) multiple views of the nodes.
. reading items into nodes provides a way to (eventually) handle compact data read/write well
. nodes are most similar to em-table items from lair

--- a/cmd/compose/www/index.html
+++ b/cmd/compose/www/index.html
@@ -4,6 +4,7 @@
 				<link rel="stylesheet" href="lib/normalize.css">
 				<link rel="stylesheet" href="index.css">
 				<link rel="stylesheet" href="src/tags.css">
+				<link rel="stylesheet" href="src/lair/lair.css">
 				<script src="lib/stretchy.js" async></script>
 				<script src="lib/mousetrap.js"></script>
 				<script src="lib/vue.js"></script>
@@ -25,6 +26,15 @@
 				><mk-context
 				></mk-context
 			></div>
+			<script src="src/lair/eventGroup.js"></script>
+			<script src="src/lair/dragGroup.js"></script>
+			<script src="src/lair/dragHandler.js"></script>
+			<script src="src/lair/dragList.js"></script>
+			<script src="src/lair/dropper.js"></script>
+			<script src="src/lair/gutter.js"></script>
+			<script src="src/lair/table.js"></script>
+			<script src="src/lair/targetFinder.js"></script>
+			<script src="src/lair/shiftMixin.js"></script>
 			<!--  -->
 			<script src="src/filters.js"></script>
 			<script src="src/bemMixin.js"></script>
@@ -52,7 +62,11 @@
 			<script src="src/slotCtrl.js"></script>
 			<script src="src/strCtrl.js"></script>
 			<script src="src/txtCtrl.js"></script>
+			<script src="src/repeaterCtrl.js"></script>
+			<script src="src/plainTextCtrl.js"></script>
 			<script src="src/switch.js"></script>
+			<!--  -->
+			<script src="src/custom/paragraphCtrl.js"></script>
 			<!--  -->
 			<script src="src/compact.js"></script> 
 			<script src="data/lang/spec.js"></script> 
