--- a/cmd/compose/www/index.html
+++ b/cmd/compose/www/index.html
@@ -20,8 +20,8 @@
 				></mk-browser
 				><div class="mk-composer"
 					><mk-switch
-							:node="story">
-					</mk-switch
+							:node="story"
+					></mk-switch
 				></div
 				><mk-context
 				></mk-context
@@ -46,9 +46,8 @@
 			<script src="src/redux.js"></script>
 			<script src="src/directives.js"></script>
 			<!--  -->
-			<script src="src/field.js"></script>
+			<script src="src/cursor.js"></script>
 			<script src="src/node.js"></script>
-			<script src="src/sibit.js"></script>
 			<script src="src/mutation.js"></script>
 			<!--  -->
 			<script src="src/browseCtrl.js"></script>
@@ -74,17 +73,17 @@
 			<!--  -->
 			<!-- <script src="tests/tagTests.js"></script> -->
 			<!-- <script src="tests/directiveTests.js"></script> -->
-			<!-- <script src="tests/nodeTests.js"></script> -->
+			<script src="tests/nodeTests.js"></script>
 			<!--  -->
 			<!-- <script src="data/stories/newStory.js"></script>  -->
 			<!-- <script src="data/stories/loadStory.js"></script>  -->
-			<script src="data/stories/currStory.js"></script> 
+			<!-- <script src="data/stories/currStory.js"></script>  -->
 			<!-- <script src="data/stories/factorialTest.js"></script>  -->
 			<!-- <script src="data/stories/cycleTest.js"></script>  -->
 			<!-- <script src="data/stories/sayTest.js"></script> -->
 			<!-- <script src="tests/sdsTests.js"></script> -->
 			<!--  -->
 			<script src="src/shortcuts.js"></script>
-			<script src="src/index.js"></script>
+			<!-- <script src="src/index.js"></script> -->
 		</body>
 </html>
