start integrating lair table display
- paragraphs normalized as lines temporarily
- some minor style tweaks

--- a/cmd/compose/www/index.html
+++ b/cmd/compose/www/index.html
@@ -65,6 +65,7 @@
 			<script src="src/plainTextCtrl.js"></script>
 			<script src="src/switch.js"></script>
 			<!--  -->
+			<script src="src/custom/storyCtrl.js"></script>
 			<script src="src/custom/paragraphCtrl.js"></script>
 			<!--  -->
 			<script src="src/compact.js"></script> 
@@ -73,7 +74,7 @@
 			<!--  -->
 			<!-- <script src="tests/tagTests.js"></script> -->
 			<!-- <script src="tests/directiveTests.js"></script> -->
-			<!-- <script src="tests/nodeTests.js"></script> -->
+			<script src="tests/nodeTests.js"></script>
 			<!--  -->
 			<!-- <script src="data/stories/newStory.js"></script>  -->
 			<!-- <script src="data/stories/loadStory.js"></script>  -->
