wip: drag/drop paragraph/line merge
tests in progress

--- a/cmd/compose/www/index.html
+++ b/cmd/compose/www/index.html
@@ -65,6 +65,7 @@
 			<script src="src/plainTextCtrl.js"></script>
 			<script src="src/switch.js"></script>
 			<!--  -->
+			<script src="src/custom/nodeTable.js"></script>
 			<script src="src/custom/storyCtrl.js"></script>
 			<script src="src/custom/paragraphCtrl.js"></script>
 			<!--  -->
