--- a/cmd/compose/www/index.html
+++ b/cmd/compose/www/index.html
@@ -22,6 +22,8 @@
 					><mk-switch
 							:node="story"
 					></mk-switch
+					><mk-trash-can
+					></mk-trash-can
 				></div
 				><mk-context
 				></mk-context
@@ -53,7 +55,8 @@
 			<script src="src/browseCtrl.js"></script>
 			<script src="src/contextCtrl.js"></script>
 			<script src="src/toolsCtrl.js"></script>
-			<!-- composer controls  -->
+				<script src="src/trashCan.js"></script>
+				<!-- composer controls  -->
 			<script src="src/pickInline.js"></script>
 			<script src="src/numCtrl.js"></script>
 			<script src="src/optCtrl.js"></script>
