compose: fix "check" tool button

--- a/cmd/compose/www/index.html
+++ b/cmd/compose/www/index.html
@@ -78,7 +78,7 @@
 			<!--  -->
 			<!-- <script src="tests/tagTests.js"></script> -->
 			<!-- <script src="tests/directiveTests.js"></script> -->
-			<script src="tests/nodeTests.js"></script>
+			<!-- <script src="tests/nodeTests.js"></script> -->
 			<!--  -->
 			<!-- <script src="data/stories/newStory.js"></script>  -->
 			<!-- <script src="data/stories/loadStory.js"></script>  -->
