composer: drag and drop for code lines

--- a/cmd/compose/www/index.html
+++ b/cmd/compose/www/index.html
@@ -72,6 +72,7 @@
 			<script src="src/custom/nodeTable.js"></script>
 			<script src="src/custom/storyCtrl.js"></script>
 			<script src="src/custom/paragraphCtrl.js"></script>
+			<script src="src/custom/activityCtrl.js"></script>
 			<!--  -->
 			<script src="src/compact.js"></script> 
 			<script src="data/lang/spec.js"></script> 
