rework drag/drop to be more compatible with browser side bar needs
-move node specific drag and drop code into "custom"

--- a/cmd/compose/www/index.html
+++ b/cmd/compose/www/index.html
@@ -30,12 +30,10 @@
 				></mk-context
 			></div>
 			<script src="src/lair/eventGroup.js"></script>
-			<script src="src/lair/dragGroup.js"></script>
+			<script src="src/lair/draggable.js"></script>
 			<script src="src/lair/dragHandler.js"></script>
-			<script src="src/lair/dragList.js"></script>
 			<script src="src/lair/dropper.js"></script>
 			<script src="src/lair/gutter.js"></script>
-			<script src="src/lair/table.js"></script>
 			<script src="src/lair/targetFinder.js"></script>
 			<script src="src/lair/shiftMixin.js"></script>
 			<!--  -->
@@ -69,7 +67,9 @@
 			<script src="src/plainTextCtrl.js"></script>
 			<script src="src/switch.js"></script>
 			<!--  -->
+			<script src="src/custom/nodeList.js"></script>
 			<script src="src/custom/nodeTable.js"></script>
+			<script src="src/custom/nodeTableCtrl.js"></script>
 			<script src="src/custom/storyCtrl.js"></script>
 			<script src="src/custom/paragraphCtrl.js"></script>
 			<script src="src/custom/activityCtrl.js"></script>
