--- a/cmd/compose/www/index.html
+++ b/cmd/compose/www/index.html
@@ -73,6 +73,7 @@
 			<script src="src/custom/storyCtrl.js"></script>
 			<script src="src/custom/paragraphCtrl.js"></script>
 			<script src="src/custom/activityCtrl.js"></script>
+			<script src="src/custom/patternRulesCtrl.js"></script>
 			<!--  -->
 			<script src="src/compact.js"></script> 
 			<script src="data/lang/spec.js"></script> 
