start of some minor drag improvements
numbered rows should only be draggable to other numbered rows
- expand Type to allow methods
- clone all drag images for consistency of handling
- refactor some "canDrag" , etc questions to NodeList
- fix bug with misordered src/dst move parameters: probably always that way.
- move em-shift to body

--- a/cmd/compose/www/index.html
+++ b/cmd/compose/www/index.html
@@ -20,6 +20,7 @@
 				><mk-browser
 				></mk-browser
 				><div class="mk-composer"
+					:class="{'em-shift': $root.shift}"
 					><mk-switch
 							:node="story"
 					></mk-switch
