--- a/cmd/compose/www/index.html
+++ b/cmd/compose/www/index.html
@@ -82,6 +82,7 @@
 			<!--  -->
 			<!-- <script src="tests/tagTests.js"></script> -->
 			<!-- <script src="tests/directiveTests.js"></script> -->
+			<!-- <script src="tests/typeTests.js"></script> -->
 			<!-- <script src="tests/nodeTests.js"></script> -->
 			<!--  -->
 			<!-- <script src="data/stories/newStory.js"></script>  -->
