composer: add some scrolling space to the end of the composer window

--- a/cmd/compose/www/index.html
+++ b/cmd/compose/www/index.html
@@ -26,6 +26,8 @@
 					></mk-switch
 					><mk-trash-can
 					></mk-trash-can
+					><div class="mk-breathing-space"
+					></div
 				></div
 				><mk-context
 				></mk-context
