composer: first pass copy/drag/paste

--- a/cmd/compose/www/index.html
+++ b/cmd/compose/www/index.html
@@ -38,7 +38,6 @@
 			<script src="src/lair/dropper.js"></script>
 			<script src="src/lair/gutter.js"></script>
 			<script src="src/lair/targetFinder.js"></script>
-			<script src="src/lair/shiftMixin.js"></script>
 			<!--  -->
 			<script src="src/filters.js"></script>
 			<script src="src/bemMixin.js"></script>
@@ -90,6 +89,7 @@
 			<!-- <script src="data/stories/newStory.js"></script>  -->
 			<!-- <script src="data/stories/loadStory.js"></script>  -->
 			<script src="data/stories/currStory.js"></script> 
+			<!-- <script src="data/stories/vowels.js"></script>  -->
 			<!-- <script src="data/stories/factorialTest.js"></script>  -->
 			<!-- <script src="data/stories/cycleTest.js"></script>  -->
 			<!-- <script src="data/stories/sayTest.js"></script> -->
