mock file loading
* move catalog singleton to composer control; use mock if its been loaded via index.html
* remove nodes.root in favor of composer control keeping current file ( which in turn gets its story data -> nodes injected on demand )
* fix whole line catalog styling -- couldnt figure a way except to do the padding depth manually
*  note: nodeTests are broken because of common noun changes

--- a/cmd/compose/www/index.html
+++ b/cmd/compose/www/index.html
@@ -14,7 +14,7 @@
 			<div id="app"
 				><mk-composer
 					:copier="copier"
-					:story="story"
+					:catalog="catalog"
 				></mk-composer
 			></div>
 			<script src="src/lair/eventGroup.js"></script>
@@ -38,11 +38,15 @@
 			<script src="src/node.js"></script>
 			<script src="src/mutation.js"></script>
 			<!--  -->
+			<script src="src/catalog/catalogItems.js"></script>
+			<script src="src/catalog/catalogStore.js"></script>
 			<script src="src/catalog/remoteCatalog.js"></script>
+			<script src="src/catalog/catButton.js"></script>
 			<script src="src/catalog/folderItem.js"></script>
 			<script src="src/catalog/fileItem.js"></script>
 			<script src="src/catalog/folderCtrl.js"></script>
 			<script src="src/catalog/catalogCtrl.js"></script>
+			<script src="src/catalog/mockCatalog.js"></script>
 			<!--  -->
 			<script src="src/navigateCtrl.js"></script>
 			<script src="src/browseCtrl.js"></script>
