composer: serve story files from backend

--- a/cmd/compose/www/index.html
+++ b/cmd/compose/www/index.html
@@ -44,7 +44,7 @@
 			<script src="src/catalog/fileItem.js"></script>
 			<script src="src/catalog/folderCtrl.js"></script>
 			<script src="src/catalog/catalogCtrl.js"></script>
-			<script src="src/catalog/mockCatalog.js"></script>
+			<!-- <script src="src/catalog/mockCatalog.js"></script> -->
 			<!--  -->
 			<script src="src/navigateCtrl.js"></script>
 			<script src="src/browseCtrl.js"></script>
@@ -76,19 +76,12 @@
 			<script src="src/compact.js"></script> 
 			<script src="data/lang/spec.js"></script> 
 			<script src="data/lang/iffy.js"></script> 
-			<!--  -->
 			<!-- <script src="tests/tagTests.js"></script> -->
 			<!-- <script src="tests/directiveTests.js"></script> -->
 			<!-- <script src="tests/typeTests.js"></script> -->
+			<!--  nodeTests has errors due to changes in noun specifications. -->
 			<!-- <script src="tests/nodeTests.js"></script> -->
-			<!--  -->
-			<!-- <script src="data/stories/newStory.js"></script>  -->
-			<!-- <script src="data/stories/loadStory.js"></script>  -->
-			<script src="data/stories/currStory.js"></script> 
-			<!-- <script src="data/stories/vowels.js"></script>  -->
-			<!-- <script src="data/stories/factorialTest.js"></script>  -->
-			<!-- <script src="data/stories/cycleTest.js"></script>  -->
-			<!-- <script src="data/stories/sayTest.js"></script> -->
+			<!--  sdsTests has errors due to changes in story file loading. -->
 			<!-- <script src="tests/sdsTests.js"></script> -->
 			<!--  -->
 			<script src="src/shortcuts.js"></script>
