composer: pattern locals

--- a/cmd/compose/www/index.html
+++ b/cmd/compose/www/index.html
@@ -68,10 +68,10 @@
 			<script src="src/custom/nodeList.js"></script>
 			<script src="src/custom/nodeTable.js"></script>
 			<script src="src/custom/nodeTableCtrl.js"></script>
-			<script src="src/custom/storyCtrl.js"></script>
-			<script src="src/custom/paragraphCtrl.js"></script>
-			<script src="src/custom/activityCtrl.js"></script>
-			<script src="src/custom/patternRulesCtrl.js"></script>
+			<script src="src/custom/paragraphNodes.js"></script>
+			<script src="src/custom/inlinePhraseList.js"></script>
+			<script src="src/custom/patternRules.js"></script>
+			<script src="src/custom/listCtrls.js"></script>
 			<!--  -->
 			<script src="src/compact.js"></script> 
 			<script src="data/lang/spec.js"></script> 
