rename "run" to "flow" for specs

--- a/cmd/compose/www/index.html
+++ b/cmd/compose/www/index.html
@@ -57,7 +57,7 @@
 			<script src="src/pickInline.js"></script>
 			<script src="src/numCtrl.js"></script>
 			<script src="src/optCtrl.js"></script>
-			<script src="src/runCtrl.js"></script>
+			<script src="src/flowCtrl.js"></script>
 			<script src="src/slotCtrl.js"></script>
 			<script src="src/strCtrl.js"></script>
 			<script src="src/txtCtrl.js"></script>
