in progress: rename opt to swap

--- a/cmd/compose/www/index.html
+++ b/cmd/compose/www/index.html
@@ -56,7 +56,7 @@
 				<!-- composer controls  -->
 			<script src="src/pickInline.js"></script>
 			<script src="src/numCtrl.js"></script>
-			<script src="src/optCtrl.js"></script>
+			<script src="src/swapCtrl.js"></script>
 			<script src="src/flowCtrl.js"></script>
 			<script src="src/slotCtrl.js"></script>
 			<script src="src/strCtrl.js"></script>
