add some colorization to flow like things

--- a/cmd/compose/www/index.html
+++ b/cmd/compose/www/index.html
@@ -9,13 +9,15 @@
 				<script src="lib/stretchy.js" async></script>
 				<script src="lib/mousetrap.js"></script>
 				<script src="lib/vue.js"></script>
+				<link rel="stylesheet"
+          href="https://fonts.googleapis.com/css?family=Fira+Code">
 		</head>
 		<body>
 			<mk-composer id="app"
 				:copier="copier"
 				:catalog="catalog"
-			></mk-composer
-			><script src="src/lair/eventGroup.js"></script>
+			></mk-composer>
+			<script src="src/lair/eventGroup.js"></script>
 			<script src="src/lair/draggable.js"></script>
 			<script src="src/lair/dragHandler.js"></script>
 			<script src="src/lair/dropper.js"></script>
